# deep_research/api.openapi.json
@@ -1135,6 +1135,18 @@
             "minLength": 1,
             "title": "Query",
             "type": "string"
+          },
+          "webhook_url": {
+            "anyOf": [
+              {
+                "maxLength": 2048,
+                "type": "string"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Webhook Url"
           }
         },
         "required": [
